Implement minimal API Gateway service for issue #52
- Create FastAPI application with multiple endpoints for tracing demo
- Add PostgreSQL connection with asyncpg for database operations
- Implement Redis caching for products endpoint
- Add HTTP client for service-to-service communication
- Create order processing endpoint demonstrating distributed transactions
- Add error testing endpoints for APM error tracking
- Configure Docker container with health checks
- Update docker-compose.yml to include API Gateway service
- Add comprehensive documentation with API endpoint details

Implements fast track approach for Datadog APM demonstration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,29 +54,37 @@ services:
     restart: unless-stopped
 
   # API Gateway Service (Python/FastAPI)
-  # Uncomment when service is implemented
-  # api-gateway:
-  #   build:
-  #     context: ./api-gateway
-  #     dockerfile: Dockerfile
-  #   container_name: hello-dd-api-gateway
-  #   environment:
-  #     <<: *common-env-vars
-  #     DD_SERVICE: api-gateway
-  #     SERVICE_PORT: ${API_GATEWAY_PORT:-8000}
-  #     INVENTORY_SERVICE_URL: ${INVENTORY_SERVICE_URL:-http://inventory-service:8001}
-  #     PRICING_SERVICE_URL: ${PRICING_SERVICE_URL:-http://pricing-service:8002}
-  #   ports:
-  #     - "${API_GATEWAY_PORT:-8000}:8000"
-  #   depends_on:
-  #     - inventory-service
-  #     - pricing-service
-  #   healthcheck:
-  #     <<: *healthcheck-defaults
-  #     test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-  #   networks:
-  #     - hello-dd-network
-  #   restart: unless-stopped
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    container_name: hello-dd-api-gateway
+    environment:
+      <<: *common-env-vars
+      DD_SERVICE: api-gateway
+      SERVICE_PORT: ${API_GATEWAY_PORT:-8000}
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: ${POSTGRES_DB:-inventory}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      INVENTORY_SERVICE_URL: ${INVENTORY_SERVICE_URL:-http://inventory-service:8001}
+      PRICING_SERVICE_URL: ${PRICING_SERVICE_URL:-http://pricing-service:8002}
+    ports:
+      - "${API_GATEWAY_PORT:-8000}:8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      <<: *healthcheck-defaults
+      test: ["CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8000/health')"]
+    networks:
+      - hello-dd-network
+    restart: unless-stopped
 
   # Inventory Service (Java/Spring Boot)
   # Uncomment when service is implemented
